# zim-studio

./: .gitignore  .zimignore  Cargo.toml  Makefile  PR_DESCRIPTION.md  PR_TEMPLATE.md  README.md  REVIEW_RESPONSE.md  rust-toolchain.toml  zim_audio_project_spec.md
.github/: dependabot.yml
.github/workflows/: README.md  ci.yml  claude-code-review.yml  release.yml
completions/: zim_gains_helper.zsh
docs/: mixing-guide.md  observability-demo.md
docs/refactor/: app_rs_analysis.md  app_rs_final_summary.md  audio_rs_analysis.md  browser_rs_analysis.md  lint_rs_analysis.md  phase1_summary.md  phase2_audio_summary.md  phase3_browser_summary.md  phase4_ui_summary.md  phase5_lint_summary.md  phase6_update_summary.md  phase7_smaller_modules_summary.md  ui_rs_analysis.md  update_rs_analysis.md
examples/: README.md  extracted-selection-example.md  minimal-sidecar.md  sidecar-example.md
src/: config.rs  constants.rs  lib.rs  main.rs  wav_metadata.rs  zimignore.rs
src/cli/: add.rs  config.rs  index.rs  init.rs  lint.rs  mod.rs  new.rs  play.rs  sync.rs  tag.rs  update.rs
src/media/: metadata.rs  mod.rs
src/player/: app.rs  audio.rs  browser.rs  mixed_source.rs  mod.rs  save_dialog.rs  save_dialog_ui.rs  telemetry.rs  timeline_waveform.rs  ui.rs  waveform.rs
src/project/: mod.rs
src/templates/: mod.rs
src/utils/: mod.rs  parallel_scan.rs  progress.rs  project.rs  sidecar.rs  validation.rs
tests/: config_test.rs
