[package]
name = "zim-studio"
version = "0.5.1"
edition = "2024"
license = "MIT"
authors = ["Ed Sweeney <ed@onextent.com>"]
description = "A Terminal-Based Audio Project Scaffold and Metadata System"

[[bin]]
name = "zim"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "6.0"
shellexpand = "3.1"
chrono = "0.4"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
