[package]
name = "zim-studio"
version = "0.8.0"
edition = "2024"
license = "MIT"
authors = ["Ed Sweeney <ed@onextent.com>"]
description = "A Terminal-Based Audio Project Scaffold and Metadata System"

[[bin]]
name = "zim"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "6.0"
shellexpand = "3.1"
chrono = "0.4"
serde_yaml = "0.9"
owo-colors = "4"
indicatif = "0.18"
console = "0.16"
dialoguer = "0.11"

# Audio player dependencies (optional for now)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.29", optional = true }
rodio = { version = "0.20", optional = true }
hound = { version = "3.5", optional = true }
claxon = { version = "0.4", optional = true }
fuzzy-matcher = { version = "0.3", optional = true }
log = { version = "0.4", optional = true }
simplelog = { version = "0.12", optional = true }

[features]
default = []
player = ["ratatui", "crossterm", "rodio", "hound", "claxon", "fuzzy-matcher", "log", "simplelog"]

[dev-dependencies]
tempfile = "3"
