[package]
name = "zim-studio"
version = "1.3.2"
edition = "2024"
license = "MIT"
authors = ["Ed Sweeney <ed@onextent.com>"]
description = "A Terminal-Based Audio Project Scaffold and Metadata System"

[[bin]]
name = "zim"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
dirs = "6.0"
shellexpand = "3"
chrono = "0.4"
serde_yaml = "0.9"
owo-colors = "4"
indicatif = "0.18"
console = "0.16"
dialoguer = "0.12"

# Audio player dependencies (optional for now)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.29", optional = true }
rodio = { version = "0.21", optional = true }
hound = { version = "3", optional = true }
claxon = { version = "0.4", optional = true }
fuzzy-matcher = { version = "0.3", optional = true }
log = { version = "0.4", optional = true }
simplelog = { version = "0.12", optional = true }
serde_json = { version = "1", optional = true }
md5 = "0.8"
uuid = { version = "1", features = ["v4"] }
rayon = "1.10"

[features]
default = ["player"]
player = ["ratatui", "crossterm", "rodio", "hound", "claxon", "fuzzy-matcher", "log", "simplelog", "serde_json"]

[dev-dependencies]
tempfile = "3"
hound = "3"
